# GraphicsFromScratch

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
GraphicsFromScratch/: CMakeLists.txt  Main.cpp  ObjData.h  Vertex.h
GraphicsFromScratch/Content/Shaders/Compiled/DXIL/: Circle.frag.dxil  CustomColor.frag.dxil  CustomSampling.frag.dxil  CustomTextureColor.frag.dxil  DepthOutline.frag.dxil  FillTexture.comp.dxil  Fractal.frag.dxil  GradientTexture.comp.dxil  Julia.frag.dxil  LinearToSRGB.comp.dxil  LinearToST2084.comp.dxil  PositionColorInstanced.vert.dxil  PositionColorPerspective.vert.dxil  PositionColorTexturePerspective.vert.dxil  PositionColorTransform.vert.dxil  PositionTexturePerspective.vert.dxil  PullSpriteBatch.vert.dxil  RawTriangle.vert.dxil  RoundedRectangle.frag.dxil  Skybox.frag.dxil  Skybox.vert.dxil  SolidColorDepth.frag.dxil  SpriteBatch.comp.dxil  TexturedQuad.comp.dxil  TexturedQuadArray.frag.dxil  TexturedQuadColor.frag.dxil  TexturedQuadColorWithMatrix.vert.dxil  TexturedQuadWithMatrix.vert.dxil  TexturedQuadWithMultiplyColor.frag.dxil  ToneMapACES.comp.dxil  ToneMapExtendedReinhardLuminance.comp.dxil  ToneMapHable.comp.dxil  ToneMapReinhard.comp.dxil
GraphicsFromScratch/Content/Shaders/Compiled/JSON/: CustomColor.frag.json  CustomTextureColor.frag.json  CustomTexturedQuad.frag.json  PositionColorTexturePerspective.vert.json
GraphicsFromScratch/Content/Shaders/Compiled/MSL/: Circle.frag.msl  Circle.vert.msl  Fractal.frag.msl  Julia.frag.msl  PositionColorPerspective.vert.msl  PositionColorTexturePerspective.vert.msl  PositionTexturePerspective.vert.msl  RoundedRectangle.frag.msl
GraphicsFromScratch/Content/Shaders/Compiled/SPIRV/: Circle.frag.spv  CustomColor.frag.spv  Fractal.frag.spv  Julia.frag.spv  PositionColorPerspective.vert.spv  PositionColorTexturePerspective.vert.spv  PositionTexturePerspective.vert.spv  RoundedRectangle.frag.spv  TextureColor.frag.spv
GraphicsFromScratch/Content/Shaders/MyShaders/: Circle.frag.hlsl  Circle.vert.hlsl  CustomColor.frag.hlsl  CustomTexturedQuad.frag.hlsl  Fractal.frag.hlsl  Julia.frag.hlsl  PositionColorTexturePerspective.vert.hlsl  PositionTexturePerspective.vert.hlsl  RoundedRectangle.frag.hlsl  TextureColor.frag.hlsl
GraphicsFromScratch/Shaders/Compiled/: fragment.spv
GraphicsFromScratch/Shaders/Source/: compile.sh  fragment.glsl  vertex.glsl
src/: Assets.cpp  Assets.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Common.cpp  Common.h  Game.cpp  Game.h  ObjData.h  Shader.cpp  Shader.h  Vertex.h  main.cpp
src/Content/Shaders/Compiled/DXIL/: CustomTexturedQuad.frag.dxil  Full.vert.dxil  Lighting.frag.dxil  PositionColorTexturePerspective.vert.dxil
src/Content/Shaders/Compiled/JSON/: Full.vert.json  Lighting.frag.json
src/Content/Shaders/Compiled/MSL/: CustomColor.frag.msl  CustomTextureColor.frag.msl  CustomTexturedQuad.frag.msl  Full.vert.msl  Lighting.frag.msl
src/Content/Shaders/Compiled/SPIRV/: CustomTexturedQuad.hlsl.spv  Full.vert.spv  Lighting.frag.spv  PositionColorTexturePerspective.vert.spv
src/Content/Shaders/MyShaders/: CustomTexturedQuad.frag.hlsl  Full.vert.hlsl  Lighting.frag.hlsl  PositionColorPerspective.vert.hlsl  compile.sh
